; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/visupng/extr_PngFile.c_PngFileOpenDlg.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/visupng/extr_PngFile.c_PngFileOpenDlg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i8*, i8*, i32 }

@ofn = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@OFN_HIDEREADONLY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PngFileOpenDlg(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %4, align 4
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ofn, i32 0, i32 3), align 8
  %8 = load i8*, i8** %5, align 8
  store i8* %8, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ofn, i32 0, i32 2), align 8
  %9 = load i8*, i8** %6, align 8
  store i8* %9, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ofn, i32 0, i32 1), align 8
  %10 = load i32, i32* @OFN_HIDEREADONLY, align 4
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ofn, i32 0, i32 0), align 8
  %11 = call i32 @GetOpenFileName(%struct.TYPE_3__* @ofn)
  ret i32 %11
}

declare dso_local i32 @GetOpenFileName(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
